STARTED - task 192: When there are a number of tabs, some are lost off the edge of the window and can't be accessed http://code.google.com/p/emite/issues/detail?id=192 (trim/truncation part)
git-svn-id: https://emite.googlecode.com/svn/trunk/hablar@1294 87f8d446-a148-0410-9e96-a52f46714620

--- a/war/Hablar.css
+++ b/war/Hablar.css
@@ -134,7 +134,7 @@ div.hablar-ActionWidget:hover {
 
 .hablar-TabsHeaderWidget .title {
     display: inline;
-    margin-right: 20px;
+    margin-right: 10px;
 }
 
 .hablar-TabsHeaderWidget.notFocused {
